--- a/src/pages/Password/resetPassword.module.css
+++ b/src/pages/Password/resetPassword.module.css
@@ -126,3 +126,11 @@
   border-color: #fff;
   background: rgba(255, 255, 255, 0.15);
 }
+
+
+/* Add these styles to your resetPassword.module.css file or your preferred stylesheet */
+
+
+.passwordIcon{
+  background-color: transparent;
+}
